# Projekt_koncowy_PI

./: .gitmodules  README.md
projectMainDir/: CMakeLists.txt  SetUp.md  run
projectMainDir/buildLinux/: CMakeCache.txt  Makefile  cmake_install.cmake  projektGra
projectMainDir/buildMac/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake
projectMainDir/include/: ButtonScenesPropertiesClass.h  SlidersAndCheckbox.h  SnakeGUI.h  snakeDetails.h
projectMainDir/libs/TGUI-1.11/buildMac/: CMakeCache.txt  Makefile  TGUIConfig.cmake  TGUISharedTargets.cmake  cmake_install.cmake
projectMainDir/libs/TGUI-1.11/buildMac/gui-builder/: Makefile  cmake_install.cmake  gui-builder
projectMainDir/libs/TGUI-1.11/buildMac/src/: Makefile  cmake_install.cmake
projectMainDir/libs/TGUI-1.11/doc/html/: _absolute_or_relative_value_8hpp_source.html  _all_widgets_8hpp_source.html  _animation_8hpp_source.html  _any_8hpp_source.html  _backend_8hpp_source.html  _backend_font_8hpp_source.html  _backend_font_factory_8hpp_source.html  _backend_font_free_type_8hpp_source.html  _backend_font_raylib_8hpp_source.html  _backend_font_s_d_lttf_8hpp_source.html  _backend_font_s_f_m_l_8hpp_source.html  _backend_g_l_f_w_8hpp_source.html  _backend_gui_8hpp_source.html  _backend_gui_g_l_f_w_8hpp_source.html  _backend_gui_raylib_8hpp_source.html  _backend_gui_s_d_l_8hpp_source.html  _backend_gui_s_f_m_l_8hpp_source.html  _backend_raylib_8hpp_source.html  _backend_render_target_8hpp_source.html  _backend_render_target_g_l_e_s2_8hpp_source.html  _backend_render_target_open_g_l3_8hpp_source.html  _backend_render_target_raylib_8hpp_source.html  _backend_render_target_s_d_l_8hpp_source.html  _backend_render_target_s_d_l_g_p_u_8hpp_source.html  _backend_render_target_s_f_m_l_8hpp_source.html  _backend_renderer_8hpp_source.html  _backend_renderer_g_l_e_s2_8hpp_source.html  _backend_renderer_open_g_l3_8hpp_source.html  _backend_renderer_raylib_8hpp_source.html  _backend_renderer_s_d_l_8hpp_source.html  _backend_renderer_s_d_l_g_p_u_8hpp_source.html  _backend_renderer_s_f_m_l_8hpp_source.html  _backend_s_d_l_8hpp_source.html  _backend_s_f_m_l_8hpp_source.html  _backend_text_8hpp_source.html  _backend_texture_8hpp_source.html  _backend_texture_g_l_e_s2_8hpp_source.html  _backend_texture_open_g_l3_8hpp_source.html  _backend_texture_raylib_8hpp_source.html  _backend_texture_s_d_l_8hpp_source.html  (+723 more)
projectMainDir/src/: ButtonCreator.cpp  main.cpp  snakeDetails.cpp
(+41 files in other folders)
